@@ -69,7 +69,7 @@ try:
 
     tmpOrganisationsVocabulary = ArchetypesOrganisationsVocabulary()
     OwnerColumn = SelectColumn("Owner",
-                                required=True,
+                                required=False,
                                 vocabulary=tmpOrganisationsVocabulary,
                                 default='')
     widget_helper_js = ('++resource++eea.daviz.datasource.js',
@@ -423,10 +423,7 @@ class MultiDataProvenanceSchemaExtender(object):
                 description="""List of Data Provenance""",
                 columns={'title': Column("Title", required=False),
                          'link': Column("Link", required=False),
-                         'owner': SelectColumn("Owner",
-                                required=False,
-                                vocabulary=tmpOrganisationsVocabulary,
-                                default='')
+                         'owner': OwnerColumn
                          },
                 auto_insert=False,
                 i18n_domain='eea',
